# song-recommender

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt  setup.py
assets/: styles.css
data/: README.md  explore.ipynb
models/: recommender.py
pages/: explore.py  recommendations.py
